--- a/opdracht 5/index.html
+++ b/opdracht 5/index.html
@@ -16,9 +16,9 @@
 			
 		</section>
 
-		<section id="home" class="startScreen">Startscherm</section>
+		<section id="home" class="startScreen invisible">Startscherm</section>
 		
-		<section id="frontEndBestPractices" class="frontEndBestPractices">Front-End best practices</section>
+		<section id="frontEndBestPractices" class="frontEndBestPractices invisible">Front-End best practices</section>
 
 	</body>
 
