--- a/opdracht 5/index.html
+++ b/opdracht 5/index.html
@@ -12,13 +12,25 @@
 			<ul>
 				<li><a href="#home">Startscherm</a></li>
 				<li><a href="#frontEndBestPractices">Front-End best practices</a></li>
-			</ul>
-			
+			</ul>	
 		</section>
 
-		<section id="home" class="startScreen invisible">Startscherm</section>
+		<section id="home" class="startScreen invisible">
+			<h3>Startscherm</h3>
+		</section>
 		
-		<section id="frontEndBestPractices" class="frontEndBestPractices invisible">Front-End best practices</section>
+		<section id="frontEndBestPractices" class="frontEndBestPractices invisible">
+			<h3>Front-End best practices</h3>
+			<ul>
+				<li>Don't use global variables/objects</li>
+				<li>Declare variables at top of scope</li>
+				<li>Use short clear meaningful names (English)</li>
+				<li>Work in strict mode</li>
+				<li>camelCase your code if(code != Constructor || CONSTANTS)</li>
+				<li>Place external scripts at the bottom of the page</li>
+				<li>Indent your code</li>
+			</ul>
+		</section>
 
 	</body>
 
